    ObjectMapper. (Akira AJISAKA via wheat9)

    HDFS-9730. Storage ID update does not happen when there is a layout change
    (Tsz Wo Nicholas Sze via kihwal)

Release 2.7.2 - 2016-01-25

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

    HDFS-8099. Change "DFSInputStream has been closed already" message to
    debug log level (Charles Lamb via Colin P. McCabe)

  OPTIMIZATIONS

    HDFS-8656. Preserve compatibility of ClientProtocol#rollingUpgrade after
    finalization. (wang)

    HDFS-8867. Enable optimized block reports. (Daryn Sharp via jing9)

  BUG FIXES

    HDFS-8863. The remaining space check in BlockPlacementPolicyDefault is
    flawed. (Kihwal Lee via yliu)

    HDFS-8995. Flaw in registration bookeeping can make DN die on reconnect.
    (Kihwal Lee via yliu)

    HDFS-8384. Allow NN to startup if there are files having a lease but are not
    under construction. (jing9)

    HDFS-9178. Slow datanode I/O can cause a wrong node to be marked bad.
    (Kihwal Lee)

    HDFS-9220. Reading small file (< 512 bytes) that is open for append fails
    due to incorrect checksum (Jing Zhao via kihwal)

    HDFS-9305. Delayed heartbeat processing causes storm of subsequent
    heartbeats. (Arpit Agarwal)

    HDFS-9083. Replication violates block placement policy (Rushabh Shah)

    HDFS-9106. Transfer failure during pipeline recovery causes permanent
    write failures. (Kihwal Lee)

    HDFS-6481. DatanodeManager#getDatanodeStorageInfos() should check the
    length of storageIDs. (szetszwo via Arpit Agarwal)

    HDFS-7725. Incorrect "nodes in service" metrics caused all writes to
    fail. (Ming Ma via wang)

    HDFS-8950. NameNode refresh doesn't remove DataNodes that are
    no longer in the allowed list. (Daniel Templeton via cmccabe)

    HDFS-8209. Support different number of datanode directories in MiniDFSCluster.
    (surendra singh lilhore via vinayakumarb)

    HDFS-9294. DFSClient deadlock when close file and failed to renew lease.